update incapsulate variant builder variables in form parts

--- a/app/templates/control-panel/variant/builder/index.html.twig
+++ b/app/templates/control-panel/variant/builder/index.html.twig
@@ -178,7 +178,7 @@
                                 role="tabpanel"
                                 aria-labelledby="{{ sidebarTab.id }}-tab"
                             >
-                                {% include sidebarTab.path %}
+                                {% include sidebarTab.path with {'form': builderForm} only %}
                             </div>
                         {% endfor %}
 
