--- a/app/public/assets/css/style-cp.css
+++ b/app/public/assets/css/style-cp.css
@@ -43,3 +43,75 @@ div::-webkit-scrollbar-thumb {
     animation: .75s linear infinite spinner-grow;
     margin-left: 0.55rem;
 }
+
+.modal-content {
+    box-shadow: 0px 8px 9px 0px rgba(96, 94, 94, 0.17), inset 0 3px 5px rgba(0, 0, 0, 0.125);
+}
+
+.sidebar--nav-left-btn.btn.active,
+.modal--nav-media-btn.btn-tab.active
+{
+    box-shadow: none;
+    color: var(--palette-color-black);
+    background-color: rgba(var(--bs-light-rgb), var(--bs-bg-opacity)) !important;
+}
+
+.sidebar--nav-top-btn.btn:active {
+    box-shadow: none;
+    color: var(--palette-color-black);
+    background-color: rgba(var(--bs-light-rgb), var(--bs-bg-opacity)) !important;
+}
+
+.form-control:focus, .form-control.focus, .form-select:focus {
+    color: var(--bs-body-color);
+    background-color: var(--bs-body-bg);
+    border-color: transparent;
+    outline: 0;
+    box-shadow: 0px 8px 9px 0px rgba(96, 94, 94, 0.17), inset 0 3px 5px rgba(0, 0, 0, 0.125);
+}
+
+.form-switch .form-check-input {
+    border-radius: 0;
+}
+
+.modal-content .btn-close {
+    --bs-btn-close-hover-opacity: 1;
+    --bs-btn-close-opacity: 1;
+    color: var(--palette-color-white) !important;
+    --bs-btn-close-bg: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23fff'%3e%3cpath d='M.293.293a1 1 0 0 1 1.414 0L8 6.586 14.293.293a1 1 0 1 1 1.414 1.414L9.414 8l6.293 6.293a1 1 0 0 1-1.414 1.414L8 9.414l-6.293 6.293a1 1 0 0 1-1.414-1.414L6.586 8 .293 1.707a1 1 0 0 1 0-1.414z'/%3e%3c/svg%3e");
+}
+
+.modal-content .btn-close:hover {
+    box-shadow: 0px 0px 3px 0px rgba(150, 150, 150, 0.725), inset 0 3px 5px rgba(0, 0, 0, 0.725);
+}
+
+.modal-content {
+    box-shadow: 0px 0px 0px 5px rgba(0, 0, 0, 0.55), 0px 0px 3px 3px rgba(0, 0, 0, 0.34);
+}
+
+.btn-close:focus {
+    box-shadow: 0px 0px 3px 0px rgba(150, 150, 150, 0.725), inset 0 3px 5px rgba(0, 0, 0, 0.725);
+}
+
+.modal-body .img.img-background {
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    box-shadow: 0px 8px 9px 0px rgba(96, 94, 94, 0.34), inset 0 3px 5px rgba(0, 0, 0, 0.225);
+    cursor: pointer;
+}
+
+.modal-body .img.img-background:hover {
+    box-shadow: 0px 0px 13px 8px rgba(96, 94, 94, 0.55), inset 0 0px 5px rgba(0, 0, 0, 0.55);
+}
+
+.square-10 {
+    height: 8.9rem;
+    width: 8.9rem;
+}
+
+
+.modal-content .tab-content {
+    min-height: 21rem;
+}
+
