--- a/app/public/assets/css/style.css
+++ b/app/public/assets/css/style.css
@@ -277,15 +277,42 @@ body {
     box-shadow: 0px 8px 9px 0px rgba(96, 94, 94, 0.17), inset 0 3px 5px rgba(0, 0, 0, 0.125);
 }
 
-.form-check-input:checked {
+.switch-form-type .form-check-input:checked {
     background-color: var(--paletter-color-primary);
     border-color: var(--paletter-color-primary);
 }
 
-.form-check-input:focus {
+.switch-form-type .form-check-input:focus {
     border-color: var(--paletter-color-primary);
     outline: 0;
     box-shadow: 0px 8px 9px 0px rgba(96, 94, 94, 0.17), inset 0 3px 5px rgba(0, 0, 0, 0.125);
+}
+
+/*.switch-form-type .form-check-input.switch-dark {*/
+/*    background-color: var(--palette-color-white);*/
+/*    border-color: var(--paletter-color-primary);*/
+/*}*/
+
+.switch-form-type .form-check-input.switch-dark {
+    --bs-form-switch-bg: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='rgba%280, 0, 0, 0.85%29'/%3e%3c/svg%3e");
+    background-color: rgb(var(--bs-light-rgb));
+    border-color: rgb(var(--bs-dark-rgb));
+}
+.switch-form-type .form-check-input.switch-dark:checked {
+    --bs-form-switch-bg: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='%23fff'/%3e%3c/svg%3e");
+    background-color: rgb(var(--bs-dark-rgb));
+    border-color: transparent;
+}
+
+.switch-form-type .form-check-input.switch-dark:focus {
+    --bs-form-switch-bg: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='rgba%280, 0, 0, 0.85%29'/%3e%3c/svg%3e");
+    border-color: rgb(var(--bs-dark-rgb));
+    outline: 0;
+    box-shadow: 0px 8px 9px 0px rgba(96, 94, 94, 0.17), inset 0 3px 5px rgba(0, 0, 0, 0.125);
+}
+
+.switch-form-type .form-check-input.switch-dark:checked:focus {
+    --bs-form-switch-bg: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='%23fff'/%3e%3c/svg%3e");
 }
 
 .bi-08 {
