update sidebar hero tool. fix media modal - make it available for multiple medias

--- a/app/templates/control-panel/variant/builder/sidebar/10---header.tab.html.twig
+++ b/app/templates/control-panel/variant/builder/sidebar/10---header.tab.html.twig
@@ -15,4 +15,4 @@
 <span >Name</span>
 {{ form_row(form.brand.name, {'label': false}) }}
 
-{% include 'control-panel/variant/builder/form-component/media-uploader.html.twig' with {'form': form.brand.logo} only %}
+{% include 'control-panel/variant/builder/form-component/media-uploader.html.twig' with {'form': form.brand.logo, 'label': 'Edit Brand Logo'} only %}
