--- a/app/templates/control-panel/variant/builder/form-component/media-uploader.html.twig
+++ b/app/templates/control-panel/variant/builder/form-component/media-uploader.html.twig
@@ -24,19 +24,19 @@
             p-3
         "
         data-bs-toggle="modal"
-        data-bs-target="#staticBackdrop"
+        data-bs-target="#{{ form.vars.id }}_media_modal"
     >
-        Edit Brand Logo
+        {{ label ?? 'Edit Image' }}
     </button>
 
     <!-- Modal -->
     <div
         class="modal fade"
-        id="staticBackdrop"
+        id="{{ form.vars.id }}_media_modal"
         data-bs-backdrop="false"
         data-bs-keyboard="false"
         tabindex="1"
-        aria-labelledby="staticBackdropLabel"
+        aria-labelledby="{{ form.vars.id }}_media_modal_label"
         aria-hidden="true"
     >
 
@@ -45,7 +45,7 @@
 
             <div class="modal-content rounded-0">
                 <div class="modal-header bg-dark text-white rounded-0 border-0">
-                    <h1 class="modal-title fs-5" id="staticBackdropLabel">Media configurator</h1>
+                    <h1 class="modal-title fs-5" id="{{ form.vars.id }}_media_modal_label">Media configurator</h1>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
 
