--- a/app/templates/control-panel/variant/builder/sidebar/30---hero.tab.html.twig
+++ b/app/templates/control-panel/variant/builder/sidebar/30---hero.tab.html.twig
@@ -1,1 +1,12 @@
-{{ form_row(form.hero, {'label' : false}) }}
+{% set form = form.hero %}
+
+{% include 'control-panel/variant/builder/form-component/show-section-switcher.html.twig' with {'form': form} only %}
+
+
+{{ form_row(form.headline) }}
+
+{{ form_row(form.subheadline) }}
+
+{% include 'control-panel/variant/builder/form-component/call-to-action-button.html.twig' with {'form': form.callToActionButton} only %}
+
+{% include 'control-panel/variant/builder/form-component/media-uploader.html.twig' with {'form': form.media, 'label': 'Edit Hero Image'} only %}
