--- a/app/public/assets/css/style.css
+++ b/app/public/assets/css/style.css
@@ -377,3 +377,7 @@ body {
     --bs-toast-header-bg: rgba(var(--bs-body-bg-rgb), 1);
     --bs-toast-bg: rgba(var(--bs-body-bg-rgb), 1);
 }
+
+.modal-backdrop {
+    display: none !important;
+}
