--- a/app/templates/control-panel/variant/builder/form-component/media-uploader.html.twig
+++ b/app/templates/control-panel/variant/builder/form-component/media-uploader.html.twig
@@ -11,10 +11,11 @@
 
     <!-- Button trigger modal -->
     <button
-        id="{{ form.vars.id }}_media"
+        id="{{ form.vars.id }}_media_modal_btn_show"
         type="button"
         class="
             sidebar--btn-media
+            media-loader
             btn
             btn-dark
             m-0
@@ -25,6 +26,11 @@
         "
         data-bs-toggle="modal"
         data-bs-target="#{{ form.vars.id }}_media_modal"
+
+        data-direction="0"
+        data-content-target="#{{ form.vars.id }}_media_catalog_content"
+        data-btn-prev="#{{ form.vars.id }}_media_catalog_prev"
+        data-btn-next="#{{ form.vars.id }}_media_catalog_next"
     >
         {{ label ?? 'Edit Image' }}
     </button>
@@ -33,9 +39,8 @@
     <div
         class="modal fade"
         id="{{ form.vars.id }}_media_modal"
-        data-bs-backdrop="false"
-        data-bs-keyboard="false"
-        tabindex="1"
+        data-bs-keyboard="true"
+        tabindex="-1"
         aria-labelledby="{{ form.vars.id }}_media_modal_label"
         aria-hidden="true"
     >
@@ -50,7 +55,7 @@
                 </div>
 
                 <div class="modal-body p-0 bg-light">
-                    <ul class="nav nav-pills mt-0 mb-1 justify-content-between px-1 bg-dark" id="pills-tab" role="tablist">
+                    <ul class="nav nav-pills mt-0 mb-1 justify-content-between px-1 bg-dark" id="{{ form.vars.id }}_media_content_tab" role="tablist">
                         <li class="nav-item" role="presentation">
                             <button
                                 class="
@@ -73,7 +78,7 @@
                                 aria-controls="{{ form.vars.id }}_modal_catalog"
                                 aria-selected="true"
                             >
-                                Catalog
+                                My
                             </button>
                         </li>
                         <li class="nav-item" role="presentation">
@@ -121,7 +126,7 @@
                                 aria-controls="{{ form.vars.id }}_modal_random"
                                 aria-selected="false"
                             >
-                                Random
+                                Share Stock
                             </button>
                         </li>
                         <li class="nav-item" role="presentation">
@@ -149,22 +154,93 @@
                             </button>
                         </li>
                     </ul>
-                    <div class="tab-content p-1 bg-light" id="pills-tabContent">
+                    <div class="tab-content p-1 bg-light" id="{{ form.vars.id }}_media_content_tab">
+
                         <div class="tab-pane fade show active" id="{{ form.vars.id }}_modal_catalog" role="tabpanel" aria-labelledby="{{ form.vars.id }}_modal_catalog-tab" tabindex="0">
-                            <ul class="d-flex flex-row flex-wrap justify-content-between list-unstyled">
-                                <li class="img img-background square-10 mt-2" style="background-image: url('https://prototyper.localhost/m/a307fdc2fce98c0bc47fdd0d0d7778218d2c2b78555514de20c416e25d1ec6d2');">
-                                </li>
-                                <li class="img img-background square-10 m-2" style="background-image: url('https://prototyper.localhost/m/1b7d8188cf9016cb175053711c14b75db4fc6fbbd4a0518d068787cdb1b285b0');">
-                                </li>
-                                <li class="img img-background square-10 mt-2" style="background-image: url('https://prototyper.localhost/m/8c46fef77f802e1b5a0370092276a56d2feeed3d15eb9090ea7c5dd73576139c');">
-                                </li>
-                                <li class="img img-background square-10 mt-2" style="background-image: url('https://prototyper.localhost/m/1f03153cfa5665e9a9af64bd943804e75ab11c58f6eca2b5e5a01c5f1599ee1c');">
-                                </li>
-                                <li class="img img-background square-10 mt-2" style="background-image: url('https://prototyper.localhost/m/84d9f9a01ff6c3144cbf9ba85bd003d48e7f9bf5fe67de5c91ce321de792fc86');">
-                                </li>
-                                <li class="square-10 mt-2"></li>
-                            </ul>
+                            <div class="tab-pane-content d-flex flex-column justify-content-between align-items-baseline">
+                                <div
+                                    id="{{ form.vars.id }}_media_catalog_content"
+                                    class="media-catalog d-flex flex-row flex-wrap justify-content-between mb-5 w-100"
+                                >
+
+                                </div>
+
+                                <div class="d-flex flex-row justify-content-between align-items-baseline w-100 pb-3">
+                                    <button
+                                        id="{{ form.vars.id }}_media_catalog_prev"
+                                        type="button"
+                                        class="
+                                        modal--tab-media-btn
+                                        modal--tab-media-btn-prev
+                                        btn
+                                        btn-dark
+                                        border-0
+                                        shadow-none
+                                        rounded-0
+                                        p-2
+                                        px-3
+                                        pe-5
+                                        text-center
+                                    "
+                                        data-direction="-1"
+                                        data-content-target="#{{ form.vars.id }}_media_catalog_content"
+                                        data-btn-prev="#{{ form.vars.id }}_media_catalog_prev"
+                                        data-btn-next="#{{ form.vars.id }}_media_catalog_next"
+                                    >
+                                        <svg class="bi bi-1 mb-1"><use xlink:href="#icon-arrow-left-fill"/></svg>
+                                        <span class="media-arrow-page-numbers"></span>
+                                    </button>
+                                    <button
+                                        id="{{ form.vars.id }}_media_catalog_more"
+                                        type="button"
+                                        class="
+                                        modal--tab-media-btn
+                                        btn-load-more
+                                        media-loader
+                                        btn
+                                        btn-dark
+                                        border-0
+                                        shadow-none
+                                        rounded-0
+                                        p-2
+                                    "
+                                        data-direction="1"
+                                        data-content-target="#{{ form.vars.id }}_media_catalog_content"
+                                        data-btn-prev="#{{ form.vars.id }}_media_catalog_prev"
+                                        data-btn-next="#{{ form.vars.id }}_media_catalog_next"
+                                    >
+                                        More
+                                    </button>
+                                    <button
+                                        id="{{ form.vars.id }}_media_catalog_next"
+                                        type="button"
+                                        class="
+                                        modal--tab-media-btn
+                                        modal--tab-media-btn-next
+                                        btn
+                                        btn-dark
+                                        border-0
+                                        shadow-none
+                                        rounded-0
+                                        p-2
+                                        px-3
+                                        ps-5
+                                        text-center
+                                    "
+                                        data-direction="1"
+                                        data-content-target="#{{ form.vars.id }}_media_catalog_content"
+                                        data-btn-prev="#{{ form.vars.id }}_media_catalog_prev"
+                                        data-btn-next="#{{ form.vars.id }}_media_catalog_next"
+                                    >
+                                        <span class="media-arrow-page-numbers"></span>
+                                        <svg class="bi bi-1 mb-1"><use xlink:href="#icon-arrow-right-fill"/></svg>
+                                    </button>
+
+                                </div>
+
+                            </div>
                         </div>
+
                         <div class="tab-pane fade" id="{{ form.vars.id }}_modal_upload" role="tabpanel" aria-labelledby="{{ form.vars.id }}_modal_upload-tab" tabindex="0">
                             {{ form_row(form.file) }}
                             <button
@@ -187,7 +263,9 @@
                             </button>
                         </div>
                         <div class="tab-pane fade" id="{{ form.vars.id }}_modal_random" role="tabpanel" aria-labelledby="{{ form.vars.id }}_modal_random-tab" tabindex="0">
+
                             {{ form_row(form.stockTags) }}
+
                             <button
                                 id="{{ form.getFromStockBtn.vars.id }}_label"
                                 type="button"
@@ -207,6 +285,7 @@
                             </button>
                         </div>
                         <div class="tab-pane fade" id="{{ form.vars.id }}_modal_ai_generate" role="tabpanel" aria-labelledby="{{ form.vars.id }}_modal_ai_generate-tab" tabindex="0">
+
                             <label
                                 for="{{ form.generateBtn.vars.id }}"
                                 type="button"
